--- a/example/index.html
+++ b/example/index.html
@@ -13,8 +13,16 @@
             background-color: #000;
             position: relative;
         }
+        .cw--painter__default {
+            background-image: url("./pointer.png");
+            background-position: center;
+            background-size: contain;
+        }
+        .cursor--default {
+            cursor: default;
+        }
 
-        .pen {
+        .cw--painter__pen {
             background-image: url("./pencil.png");
             background-position: center;
             background-size: contain;
@@ -22,12 +30,12 @@
         .cursor--pen {
             cursor: url(./pencil.png), default;
         }
-        .clear {
+        .cw--painter__clear {
             background-image: url("./clear.png");
             background-position: center;
             background-size: contain;
         }
-        .eraser {
+        .cw--painter__eraser {
             background-image: url("./eraser.png");
             background-position: center;
             background-size: contain;
@@ -35,7 +43,7 @@
         .cursor--eraser {
             cursor: url(./eraser.png), default;
         }
-        .reset {
+        .cw--painter__reset {
             background-image: url("./reset.png");
             background-position: center;
             background-size: contain;
@@ -43,7 +51,7 @@
         .cursor--rect {
             cursor: crosshair;
         }
-        .rect {
+        .cw--painter__rect {
             background-image: url("./rect.png");
             background-position: center;
             background-size: contain;
@@ -51,7 +59,7 @@
         .cursor--circle {
             cursor: crosshair;
         }
-        .circle {
+        .cw--painter__circle {
             background-image: url("./circle.png");
             background-position: center;
             background-size: contain;
